--- a/app/globals.css
+++ b/app/globals.css
@@ -91,9 +91,7 @@
 /* Styles de base */
 html,
 body {
-  font-family: var(--font-geist-sans), -apple-system, BlinkMacSystemFont,
-    Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
-    Helvetica Neue, sans-serif;
+  font-family: Roboto, sans-serif;
   font-size: 16px;
   line-height: 1.6;
   color: var(--dark);
